--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		<header class="header">
 			<div class="header__container">
 				<h1 class="logo">
-					<a href="#" class="logo__link"><img src="" alt="INSTANTPUNK"></a>
+					<a href="#" class="logo__link"><span class="a11y">INSTANTPUNK</span></a>
 				</h1>
 			</div>
 		</header>
@@ -26,37 +26,149 @@
 			</div>
 			<div class="menu">
 				<nav class="menu__container">
-					<ul class="menu__list">
-						<li class="menu__item menu__item--outer">
+					<ul class="menu__list menu__list--col2">
+						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__inner">
-									<span class="menu__text">OUTER</span>
+								<div class="menu__round menu__round--darkgreen">
+									<div class="menu__inner menu__inner--center">
+										<p class="menu__category">OUTER</p>
+									</div>
 								</div>
 							</a>
 						</li>
-						<li class="menu__item menu__item--bottom">
+						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__inner">
-									<span class="menu__text">BOTTOM</span>
+								<div class="menu__round menu__round--cyan">
+									<div class="menu__inner menu__inner--center">
+										<p class="menu__category">BOTTOM</p>
+									</div>
 								</div>
 							</a>
 						</li>
-						<li class="menu__item menu__item--top">
+						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__inner">
-									<span class="menu__text">TOP</span>
+								<div class="menu__round menu__round--yellow">
+									<div class="menu__inner menu__inner--center">
+										<p class="menu__category">TOP</p>
+									</div>
 								</div>
 							</a>
 						</li>
-						<li class="menu__item menu__item--acc">
+						<li class="menu__item">
 							<a href="#" class="menu__link">
-								<div class="menu__inner">
-									<span class="menu__text">ACC</span>
+								<div class="menu__round menu__round--darkpink">
+									<div class="menu__inner menu__inner--center">
+										<p class="menu__category">ACC</p>
+									</div>
 								</div>
 							</a>
 						</li>
 					</ul>
 				</nav>
+				<div class="menu__container">
+					<ul class="menu__list menu__list--col3">
+						<li class="menu__item">
+							<a href="#" class="menu__link">
+								<div class="menu__round menu__round--purple">
+									<div class="menu__inner">
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+									</div>
+									<div class="menu__right">
+										<p class="menu__discount">₩46,000</p>
+										<p class="menu__price">₩50,000(30%)</p>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link menu__link--none">
+								<div class="menu__round menu__round--lightgreen">
+									<div class="menu__inner">
+										<!-- soldout -->
+										<div class="carousel">
+											<div class="carousel__mask">
+												<p class="carousel__loop">
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+												</p>
+												<p class="carousel__loop">
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+												</p>
+											</div>
+										</div>
+										<!-- // soldout -->
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<span class="menu__coupon">COUPON</span>
+									</div>
+									<div class="menu__right">
+										<p class="menu__price">₩50,000</p>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">
+								<div class="menu__round menu__round--lightpink">
+									<div class="menu__inner">
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<span class="menu__coupon">COUPON</span>
+									</div>
+									<div class="menu__right">
+										<p class="menu__price">₩50,000</p>
+									</div>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</main>
 		<footer class="footer"></footer>
