가이드 작업중

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./assets/css/ui.css">
+	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
 	<div id="wrap">
@@ -171,7 +172,14 @@
 				</div>
 			</div>
 		</main>
-		<footer class="footer"></footer>
+		<footer class="footer">
+			<div class="button">
+				<div class="button__container">
+					<button type="button" class="button__item">회원가입</button>
+					<a href="#" class="button__item">로그인</a>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
