헤더, 메인 작업중

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -21,7 +21,112 @@
 		</header>
 
     <div id="container">
-
+			<div class="menu">
+				<div class="menu__container">
+					<ul class="menu__list menu__list--col3">
+						<li class="menu__item">
+							<a href="#" class="menu__link">
+								<div class="menu__round menu__round--purple">
+									<div class="menu__inner">
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+									</div>
+									<div class="menu__right">
+										<p class="menu__discount">₩46,000</p>
+										<p class="menu__price">₩50,000(30%)</p>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link menu__link--none">
+								<div class="menu__round menu__round--lightgreen">
+									<div class="menu__inner">
+										<!-- soldout -->
+										<div class="carousel">
+											<div class="carousel__mask">
+												<p class="carousel__loop">
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+												</p>
+												<p class="carousel__loop">
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+													<span class="carousel__text">SOLD OUT</span>
+												</p>
+											</div>
+										</div>
+										<!-- // soldout -->
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<span class="menu__coupon">COUPON</span>
+									</div>
+									<div class="menu__right">
+										<p class="menu__price">₩50,000</p>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li class="menu__item">
+							<a href="#" class="menu__link">
+								<div class="menu__round menu__round--lightpink">
+									<div class="menu__inner">
+										<div class="menu__swiper swiper-container">
+											<ul class="menu__track swiper-wrapper">
+												<li class="menu__slide swiper-slide">
+													<div class="menu__img">
+														<img src="./assets/images/product.png" alt="상품">
+													</div>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								<div class="menu__info">
+									<div class="menu__left">
+										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
+										<span class="menu__coupon">COUPON</span>
+									</div>
+									<div class="menu__right">
+										<p class="menu__price">₩50,000</p>
+									</div>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
     </div>
 
 		<footer class="footer"></footer>
