--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="./assets/css/ui.css">
 	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
@@ -15,13 +14,36 @@
 				<h1 class="logo">
 					<a href="#" class="logo__link"><span class="a11y">INSTANTPUNK</span></a>
 				</h1>
+				<div class="nav">
+					<div class="nav__container">
+						<button type="button" class="nav__trigger nav__trigger--active">
+							<i class="nav__ico"></i>
+							SHOP
+						</button>
+						<nav class="nav__layer">
+							<ul class="nav__list">
+								<li class="nav__item">
+									<a href="#" class="nav__link"></a>
+								</li>
+							</ul>
+						</nav>
+						<button type="button" class="nav__trigger">CLOSET</button>
+					</div>
+				</div>
+				<div class="header__right">
+					검색
+				</div>
 			</div>
 		</header>
 		<main class="container">
 			<div class="visual">
 				<div class="visual__container">
 					<div class="video">
-						<div class="video__container"></div>
+						<div class="video__container">
+							<video autoplay loop muted style="width: 100%; height: 100%; object-fit: cover;">
+								<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+							</video>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -66,110 +88,6 @@
 						</li>
 					</ul>
 				</nav>
-				<div class="menu__container">
-					<ul class="menu__list menu__list--col3">
-						<li class="menu__item">
-							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--purple">
-									<div class="menu__inner">
-										<div class="menu__swiper swiper-container">
-											<ul class="menu__track swiper-wrapper">
-												<li class="menu__slide swiper-slide">
-													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-									</div>
-									<div class="menu__right">
-										<p class="menu__discount">₩46,000</p>
-										<p class="menu__price">₩50,000(30%)</p>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="menu__item">
-							<a href="#" class="menu__link menu__link--none">
-								<div class="menu__round menu__round--lightgreen">
-									<div class="menu__inner">
-										<!-- soldout -->
-										<div class="carousel">
-											<div class="carousel__mask">
-												<p class="carousel__loop">
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-												</p>
-												<p class="carousel__loop">
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-												</p>
-											</div>
-										</div>
-										<!-- // soldout -->
-										<div class="menu__swiper swiper-container">
-											<ul class="menu__track swiper-wrapper">
-												<li class="menu__slide swiper-slide">
-													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-										<span class="menu__coupon">COUPON</span>
-									</div>
-									<div class="menu__right">
-										<p class="menu__price">₩50,000</p>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li class="menu__item">
-							<a href="#" class="menu__link">
-								<div class="menu__round menu__round--lightpink">
-									<div class="menu__inner">
-										<div class="menu__swiper swiper-container">
-											<ul class="menu__track swiper-wrapper">
-												<li class="menu__slide swiper-slide">
-													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
-													</div>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-										<span class="menu__coupon">COUPON</span>
-									</div>
-									<div class="menu__right">
-										<p class="menu__price">₩50,000</p>
-									</div>
-								</div>
-							</a>
-						</li>
-					</ul>
-				</div>
 			</div>
 		</main>
 		<footer class="footer">
