상품 상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>상품상세</title>
 	
-	<script src="./assets/js/jquery-2.1.1.js"></script>
-	<script src="./assets/js/modernizr.js"></script>
-	<link rel="stylesheet" href="./assets/css/ui.css">
+	<script src="../assets/js/jquery-2.1.1.js"></script>
+	<script src="../assets/js/modernizr.js"></script>
+	<link rel="stylesheet" href="../assets/css/ui.css">
+	<link rel="stylesheet" href="../assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
@@ -20,7 +21,31 @@
 			</div>
 		</header>
 
-    <div id="container">
+    <div class="container sub__container">
+
+			<div class="detail__container">
+				<div class="detail__image">
+
+				</div>
+				
+				<div class="detail_info">
+					<div class="detail_info--inner">
+						<h3 class="product__type">아우터</h3>
+						<h2 class="product__name">레이어드 크롭자켓  오하이오 색상</h2>
+
+						<div class="product__price">
+							<span>₩ 83,080</span>
+						</div>
+
+						<div class="product__tag">
+							<span class="product__tag--name">스퀘어넥</span>
+							<span class="product__tag--name">Golf</span>
+							<span class="product__tag--name">스탠다드핏</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
 
     </div>
 
