--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -5,37 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+
+	<script src="./assets/js/jquery-2.1.1.js"></script>
+	<script src="./assets/js/ui.js"></script>
+	<link rel="stylesheet" href="./assets/css/ui.css">
 	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
 	<div id="wrap">
-		<header class="header">
-			<div class="header__container">
-				<h1 class="logo">
-					<a href="#" class="logo__link"><span class="a11y">INSTANTPUNK</span></a>
-				</h1>
-				<div class="nav">
-					<div class="nav__container">
-						<button type="button" class="nav__trigger nav__trigger--active">
-							<i class="nav__ico"></i>
-							SHOP
-						</button>
-						<nav class="nav__layer">
-							<ul class="nav__list">
-								<li class="nav__item">
-									<a href="#" class="nav__link"></a>
-								</li>
-							</ul>
-						</nav>
-						<button type="button" class="nav__trigger">CLOSET</button>
-					</div>
-				</div>
-				<div class="header__right">
-					검색
-				</div>
-			</div>
-		</header>
-		<main class="container">
+		@@include('./inc/header.inc', {
+			"login": "true",
+			"webroot": "."
+		})
+
+		<div class="container">
 			<div class="visual">
 				<div class="visual__container">
 					<div class="video">
@@ -90,6 +73,7 @@
 				</nav>
 			</div>
 		</main>
+
 		<footer class="footer">
 			<div class="button">
 				<div class="button__container">
