--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -6,19 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>상품목록</title>
   
-	<script src="./assets/js/jquery-2.1.1.js"></script>
-	<script src="./assets/js/modernizr.js"></script>
-	<link rel="stylesheet" href="./assets/css/ui.css">
+	<script src="../assets/js/jquery-2.1.1.js"></script>
+	<script src="../assets/js/modernizr.js"></script>
+	<script src="../assets/js/ui.js"></script>
+	<link rel="stylesheet" href="../assets/css/ui.css">
 </head>
 <body>
 	<div id="wrap">
-		<header class="header">
-			<div class="header__container">
-				<h1 class="logo">
-					<a href="#" class="logo__link"><span class="a11y">INSTANTPUNK</span></a>
-				</h1>
-			</div>
-		</header>
+		@@include('../inc/header.inc', {
+			"login": "false",
+			"webroot": ".."
+		})
 
     <div id="container">
 			<div class="menu">
