--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -8,18 +8,16 @@
 	
 	<script src="../assets/js/jquery-2.1.1.js"></script>
 	<script src="../assets/js/modernizr.js"></script>
+	<script src="../assets/js/ui.js"></script>
 	<link rel="stylesheet" href="../assets/css/ui.css">
 	<link rel="stylesheet" href="../assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
-		<header class="header">
-			<div class="header__container">
-				<h1 class="logo">
-					<a href="#" class="logo__link"><span class="a11y">INSTANTPUNK</span></a>
-				</h1>
-			</div>
-		</header>
+		@@include('../inc/header.inc', {
+			"login": "false",
+			"webroot": ".."
+		})
 
     <div class="container sub__container">
 
