상품 상세 작업중

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>INSTANTPUNK HTML PATH</title>
 	<link rel="stylesheet" href="./assets/css/ui.css">
 </head>
 <body>
@@ -37,6 +37,12 @@
 					<td>작업중</td>
 				</tr>
 				<tr>
+					<td>ARCHIVE</td>
+					<td>PC_COL_1000</td>
+					<td><a href="#" target="_blank">./#</a></td>
+					<td></td>
+				</tr>
+				<tr>
 					<td>Product > 목록</td>
 					<td>PC_SHP_1000</td>
 					<td><a href="./product/PC_SHP_1000.html" target="_blank">./product/PC_SHP_1000.html</a></td>
@@ -47,12 +53,6 @@
 					<td>PC_SHP_1001</td>
 					<td><a href="./product/PC_SHP_1001.html" target="_blank">./product/PC_SHP_1001.html</a></td>
 					<td>작업중</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td><a href="#" target="_blank">./#</a></td>
-					<td></td>
 				</tr>
 				<tr>
 					<td></td>
