메인 작업중

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 
 	<script src="./assets/js/jquery-2.1.1.js"></script>
+	<script src="./assets/js/swiper.min.js"></script>
 	<script src="./assets/js/ui.js"></script>
 	<link rel="stylesheet" href="./assets/css/ui.css">
 	<link rel="stylesheet" href="./assets/css/main.css">
@@ -26,6 +27,482 @@
 							<video autoplay loop muted style="width: 100%; height: 100%; object-fit: cover;">
 								<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
 							</video>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="best-menu">
+				<div class="carousel">
+					<div class="carousel">
+						<div class="carousel__mask">
+							<p class="carousel__loop">
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+							</p>
+							<p class="carousel__loop">
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="best-menu__container">
+					<div class="best-menu__list">
+						<div class="best-menu__row best-menu__row--col4">
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--green">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--pink">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--yellow">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--cyan">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="best-menu__row best-menu__row--col2 best-menu__row--stretch">
+							<div class="best-menu__col best-menu__col--half">
+								<div class="best-menu__row best-menu__row--col2">
+									<div class="best-menu__col">
+										<div class="best-menu__item">
+											<div class="swiper-container">
+												<div class="swiper-wrapper">
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/@product_s.png" alt="">
+															</div>
+															<div class="best-menu__info best-menu__info--green">
+																<p class="best-menu__category">ACCESSORY</p>
+																<p class="best-menu__name">
+																	boucle<br>
+																	sleeveless
+																</p>
+																<a href="#" class="best-menu__link">VIEW</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/dummy.png" alt="">
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="best-menu__col">
+										<div class="best-menu__item">
+											<div class="swiper-container">
+												<div class="swiper-wrapper">
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/@product_s.png" alt="">
+															</div>
+															<div class="best-menu__info best-menu__info--pink">
+																<p class="best-menu__category">ACCESSORY</p>
+																<p class="best-menu__name">
+																	boucle<br>
+																	sleeveless
+																</p>
+																<a href="#" class="best-menu__link">VIEW</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/dummy.png" alt="">
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="best-menu__row best-menu__row--col2">
+									<div class="best-menu__col">
+										<div class="best-menu__item">
+											<div class="swiper-container">
+												<div class="swiper-wrapper">
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/@product_s.png" alt="">
+															</div>
+															<div class="best-menu__info best-menu__info--green">
+																<p class="best-menu__category">ACCESSORY</p>
+																<p class="best-menu__name">
+																	boucle<br>
+																	sleeveless
+																</p>
+																<a href="#" class="best-menu__link">VIEW</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/dummy.png" alt="">
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="best-menu__col">
+										<div class="best-menu__item">
+											<div class="swiper-container">
+												<div class="swiper-wrapper">
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/@product_s.png" alt="">
+															</div>
+															<div class="best-menu__info best-menu__info--pink">
+																<p class="best-menu__category">ACCESSORY</p>
+																<p class="best-menu__name">
+																	boucle<br>
+																	sleeveless
+																</p>
+																<a href="#" class="best-menu__link">VIEW</a>
+															</div>
+														</div>
+													</div>
+													<div class="swiper-slide">
+														<div class="best-menu__inner">
+															<div class="best-menu__img">
+																<img src="./assets/images/dummy.png" alt="">
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/@product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--green">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="best-menu__row best-menu__row--col4">
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--purple">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--orange">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--green">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="best-menu__col">
+								<div class="best-menu__item">
+									<div class="swiper-container">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/product.png" alt="">
+													</div>
+													<div class="best-menu__info best-menu__info--green">
+														<p class="best-menu__category">ACCESSORY</p>
+														<p class="best-menu__name">
+															boucle<br>
+															sleeveless
+														</p>
+														<a href="#" class="best-menu__link">VIEW</a>
+													</div>
+												</div>
+											</div>
+											<div class="swiper-slide">
+												<div class="best-menu__inner">
+													<div class="best-menu__img">
+														<img src="./assets/images/dummy.png" alt="">
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="carousel">
+					<div class="carousel">
+						<div class="carousel__mask">
+							<p class="carousel__loop">
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+							</p>
+							<p class="carousel__loop">
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+								<span class="carousel__text">BEST</span>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -72,16 +549,38 @@
 					</ul>
 				</nav>
 			</div>
-		</main>
-
-		<footer class="footer">
-			<div class="button">
-				<div class="button__container">
-					<button type="button" class="button__item">회원가입</button>
-					<a href="#" class="button__item">로그인</a>
+			<div class="celeb-curation">
+				<div class="celeb-curation__container">
+					<div class="swiper-container">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="menu">
+									<div class="menu__container">
+										<div class="menu__list menu__list--col2">
+											<div class="menu__item">
+												<a href="#" class="menu__link">
+													<div class="menu__round menu__round--darkgreen">
+														<div class="menu__inner menu__inner--center">
+															<p class="menu__category">OUTER</p>
+														</div>
+													</div>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
+		</div>
+
+		<footer class="footer">
 		</footer>
 	</div>
+	<script>
+    var swiper = new Swiper('.swiper-container');
+  </script>
 </body>
 </html>
