메인작업중

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -507,6 +507,43 @@
 					</div>
 				</div>
 			</div>
+			<div class="celeb-curation">
+				<div class="celeb-curation__container">
+					<span class="celeb-curation__text">CELEB</span>
+					<div class="swiper-container">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="menu">
+									<div class="menu__container">
+										<div class="menu__list menu__list--col2">
+											<div class="menu__item">
+												<div class="menu__round">
+													<div class="menu__inner">
+														<div class="menu__img">
+															<img src="./assets/images/dummy.png" alt="">
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="menu__item">
+												<a href="#" class="menu__link">
+													<div class="menu__round">
+														<div class="menu__inner">
+															
+														</div>
+													</div>
+												</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<button type="button" class="celeb-curation__"></button>
+					</div>
+					<span class="celeb-curation__text">CELEB</span>
+				</div>
+			</div>
 			<div class="menu">
 				<nav class="menu__container">
 					<ul class="menu__list menu__list--col2">
@@ -548,31 +585,6 @@
 						</li>
 					</ul>
 				</nav>
-			</div>
-			<div class="celeb-curation">
-				<div class="celeb-curation__container">
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="menu">
-									<div class="menu__container">
-										<div class="menu__list menu__list--col2">
-											<div class="menu__item">
-												<a href="#" class="menu__link">
-													<div class="menu__round menu__round--darkgreen">
-														<div class="menu__inner menu__inner--center">
-															<p class="menu__category">OUTER</p>
-														</div>
-													</div>
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 
