상품 상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -84,7 +84,7 @@
 						<div class="product__reivew">
 							<div class="product__reivew--title">
 								<p>Review</p>
-								<p>
+								<p class="review__count">
 									<span class="ic_star"></span>
 									4.8 <span>(36)</span>
 								</p>
@@ -150,6 +150,12 @@
 								<a href="#" class="act__btn btn_addtocart">CART</a>
 								<a href="#" class="act__btn btn_buynow">BUY</a>
 							</div>
+							<div class="product__act--button">
+								<a href="#" class="act__btn btn_soldout">SOLD OUT</a>
+							</div>
+							<div id="NaverChk_Button" class="product__naverchk">
+								<img src="../assets/images/temp/@naverpay.jpg">
+							</div>
 						</div>
 
 					</div>
@@ -163,7 +169,7 @@
 
 					<div id="prdGuide" class="product__section">
 						<div class="accord_wrap">
-							<div class="accord_item" data-status="expanded">
+							<div class="accord_item" data-status="hidden">
 								<div class="accord_title">
 									<a href="#" class="accord_target" tabindex="0">상품결제 <span></span></a>
 								</div>
@@ -174,11 +180,49 @@
 										주문시 입력한 입금자명과 실제입금자의 성명이 반드시 일치하여야 하며, 7일 이내로 입금을 하셔야 하며 입금되지 않은 주문은 자동취소 됩니다.</p>
 								</div>
 							</div>
+							<div class="accord_item" data-status="hidden">
+								<div class="accord_title">
+									<a href="#" class="accord_target" tabindex="0">교환과 반품 <span></span></a>
+								</div>
+								<div class="accord_panel">
+									<p>취소 / 반품 / 교환 안내<br><br>
+										- 오배송 / 상품이상 외에 사이즈, 색상교환 등 고객님의 단순 변심에 의한 교환 / 반품 택배비는 고객님에게 부담이되며, 무료배송 주문인 경우 왕복택배비가 발생합니다.<br><br>
+										[ 전자상거래 등에서의 소비자보호에 관한 법률 제17조(청약 철회등)9항에 의거 소비자의 사정에 의한 청약 철회 시 택배비는 소비자 부담입니다. ]<br><br>
+										- 무료배송에 대해 변심 반품시, 반품비 6,000원 (최초배송비 3,000원 + 반송비 3,000원)이 발생됩니다. 반품시 동봉을 요청드리며, 동봉하지 않으셨을 경우 환불금에서 차감하여 처리됩니다.<br><br>
+										- 무료배송에 대해 변심 교환시, 교환비 6,000원 (최초배송비 3,000원 + 반송비 3,000원)이 발생됩니다. 반품시 동봉을 요청드리며, 교환비 확인 후 새상품을 발송하고 있습니다.<br><br>
+										- 결제완료 후 배송 전 주문 취소는 [ORDER> 주문정보]탭에서 직접 처리 가능합니다.<br><br>
+										- 주문처리상태가 상품준비중인 경우 이미 배송을 했거나 포장을 완료했을 수 있습니다. 직접 처리가 불가하오니 고객센터 전화 또는 페이지내 채팅상담을 통해 문의 바랍니다.<br><br>
+										- 주문완료 후 재고 부족, 주문 폭주 등으로 인해 주문 취소 처리가 될 수도 있는 점 양해 부탁드립니다.<br><br>
+										- 반품/교환은 미사용 제품에 한해 배송완료 후 7일 이내 접수 해주세요.<br><br>
+										- 임의반품은 불가합니다. 고객센터나 [ORDER] 페이지를 통해서 접수하시기 바랍니다.<br><br>
+										- 상품하자, 오배송의 경우 택배비 무료로 교환/반품이 가능하지만 모니터의 색상차이, 착용감, 사이즈의 개인의 선호도는 상품의 하자 사유가 아닙니다.<br><br>
+										- 주문제작 상품 및 상품의 손상 및 택, 기타 부수포장 등이 제거되어 있을 경우 반품 / 교환이 불가능합니다.<br><br>
+										- 고객 부주의로 상품이 훼손, 변경된 경우 반품 / 교환이 불가능 합니다.<br><br>
+										- 취소/반품 대금환불이 지연 시 전자상거래법에 의거하여 환불지연 배상처리 절차가 진행됩니다.</p>
+								</div>
+							</div>
+							<div class="accord_item" data-status="hidden">
+								<div class="accord_title">
+									<a href="#" class="accord_target" tabindex="0">배송 <span></span></a>
+								</div>
+								<div class="accord_panel">
+									<p>
+										배송 방법 : 택배<br><br>
+										배송 지역 : 전국지역<br><br>
+										배송 비용 : 0 원<br><br>
+										배송 기간 : 3일 ~ 7일<br><br>
+										배송 안내 : 산간벽지나 도서지방은 별도의 추가금액을 지불하셔야 하는 경우가 있습니다.<br>
+										고객님께서 주문하신 상품은 입금 확인후 배송해 드립니다. 다만, 상품종류에 따라서 상품의 배송이 다소 지연될 수 있습니다.
+									</p>
+								</div>
+							</div>
 						</div>
 					</div>
 
 					<div id="prdTalkwalk" class="product__section">
-
+						<div>
+							<img src="../assets/images/temp/@talkwalk.jpg">
+						</div>
 					</div>
 
 					<div id="prdReview" class="product__section">
