메인 작업중

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -9,6 +9,7 @@
 	<script src="./assets/js/jquery-2.1.1.js"></script>
 	<script src="./assets/js/swiper.min.js"></script>
 	<script src="./assets/js/ui.js"></script>
+	<script src="./assets/js/main.js"></script>
 	<link rel="stylesheet" href="./assets/css/ui.css">
 	<link rel="stylesheet" href="./assets/css/main.css">
 </head>
@@ -509,39 +510,88 @@
 			</div>
 			<div class="celeb-curation">
 				<div class="celeb-curation__container">
-					<span class="celeb-curation__text">CELEB</span>
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="menu">
-									<div class="menu__container">
-										<div class="menu__list menu__list--col2">
-											<div class="menu__item">
-												<div class="menu__round">
-													<div class="menu__inner">
-														<div class="menu__img">
-															<img src="./assets/images/dummy.png" alt="">
+					<div class="celeb-curation__screen">
+						<div class="celeb-curation__curtain">
+							<span class="celeb-curation__text">CELEB</span>
+						</div>
+						<div class="celeb-curation__swiper">
+							<div class="swiper-container">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="menu">
+											<div class="menu__container">
+												<div class="menu__list menu__list--col2">
+													<div class="menu__item">
+														<div class="menu__round">
+															<div class="menu__inner">
+																<div class="menu__img">
+																	<img src="./assets/images/dummy.png" alt="">
+																</div>
+															</div>
 														</div>
+													</div>
+													<div class="menu__item">
+														<a href="#" class="menu__link">
+															<div class="menu__round menu__round--yellow">
+																<div class="menu__inner">
+																	<div class="menu__img">
+																		<img src="./assets/images/product.png" alt="">
+																	</div>
+																	<div class="menu__info">
+																		<p class="menu__name">
+																			22SS SLIM NEAT<br>
+																			ZIPUP
+																		</p>
+																	</div>
+																</div>
+															</div>
+														</a>
 													</div>
 												</div>
 											</div>
-											<div class="menu__item">
-												<a href="#" class="menu__link">
-													<div class="menu__round">
-														<div class="menu__inner">
-															
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="menu">
+											<div class="menu__container">
+												<div class="menu__list menu__list--col2">
+													<div class="menu__item">
+														<div class="menu__round">
+															<div class="menu__inner">
+																<div class="menu__img">
+																	<img src="./assets/images/dummy.png" alt="">
+																</div>
+															</div>
 														</div>
 													</div>
-												</a>
+													<div class="menu__item">
+														<a href="#" class="menu__link">
+															<div class="menu__round menu__round--yellow">
+																<div class="menu__inner">
+																	<div class="menu__img">
+																		<img src="./assets/images/product.png" alt="">
+																	</div>
+																	<div class="menu__info">
+																		<p class="menu__name">
+																			22SS SLIM NEAT<br>
+																			ZIPUP
+																		</p>
+																	</div>
+																</div>
+															</div>
+														</a>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<button type="button" class="celeb-curation__"></button>
+						<div class="celeb-curation__curtain">
+							<span class="celeb-curation__text">CURATION</span>
+						</div>
 					</div>
-					<span class="celeb-curation__text">CELEB</span>
 				</div>
 			</div>
 			<div class="menu">
