--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -236,7 +236,11 @@
 
     </div>
 
-		<footer class="footer"></footer>
+		
+		@@include('../inc/footer.inc', {
+			"login": "false",
+			"webroot": ".."
+		})
 	</div>
 
 	<script src="../assets/js/swiper.min.js"></script>
