--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -23,11 +23,34 @@
 		<div class="container">
 			<div class="visual">
 				<div class="visual__container">
-					<div class="video">
-						<div class="video__container">
-							<video autoplay loop muted style="width: 100%; height: 100%; object-fit: cover;">
-								<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
-							</video>
+					<div class="visual__mask">
+						<div class="swiper-container">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="visual__video">
+										<video autoplay loop muted>
+											<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+										</video>
+									</div>
+									<div class="visual__contents">
+										<dov class="visual__inner">
+											<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
+											<p class="visual__title">
+												INSTANT<br>
+												POOL
+											</p>
+											<a href="#" class="visual__link">VIEW</a>
+										</dov>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="visual__video">
+										<video autoplay loop muted>
+											<source src="https://googlechrome.github.io/samples/muted-autoplay/chrome-clip.mp4" type="video/mp4">
+										</video>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -586,6 +609,8 @@
 										</div>
 									</div>
 								</div>
+								<button type="button" class="swiper-button-next">NEXT</button>
+        				<button type="button" class="swiper-button-prev">PREV</button>
 							</div>
 						</div>
 						<div class="celeb-curation__curtain">
@@ -638,11 +663,17 @@
 			</div>
 		</div>
 
-		<footer class="footer">
-		</footer>
+		@@include('./inc/footer.inc', {
+			"webroot": "."
+		})
 	</div>
 	<script>
-    var swiper = new Swiper('.swiper-container');
+    const bestMenuSwiper = new Swiper('.best-menu .best-menu__item .swiper-container');
+
+		const celebCurationSwiper = new Swiper('.celeb-curation .celeb-curation__swiper .swiper-container', {
+			nextButton: '.celeb-curation .celeb-curation__swiper .swiper-button-next',
+			prevButton: '.celeb-curation .celeb-curation__swiper .swiper-button-prev'
+		});
   </script>
 </body>
 </html>
