--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -244,10 +244,6 @@
 	</div>
 
 	<script src="../assets/js/swiper.min.js"></script>
-	<script>
-		var productSwiper = new Swiper('.productDetailswp', {
-			pagination: '.swiper-pagination',
-		});
-	</script>
+	<script src="../assets/js/product.js"></script>
 </body>
 </html>
